이력조회 아코디언 기능 추가

--- a/pages/SC_ADMIN_401.html
+++ b/pages/SC_ADMIN_401.html
@@ -325,9 +325,16 @@
                                                     <td class="body14R">조태호<br>매니저</td>
                                                     <td class="body14R">ㅇㅇㅇ팀</td>
                                                     <td class="body14R td_left">
-                                                        <div class="ctnt_area">
-                                                            <span class="text">...</span>
-                                                            <button class="btn btn-line-02 btn-small btn-more"><span>세부 내용 조회</span></button>
+                                                        <div class="accordion-item">
+                                                            <div class="w100 accordion-link flex justify-between">
+                                                                <div class="ctnt_area">
+                                                                    <span class="text">...</span>
+                                                                </div>
+                                                                <button class="btn_accr"></button>
+                                                            </div>
+                                                            <div class="accordion-desc bg-gray50 body14R">
+                                                                이력의 세부 내용이 존재하는 경우 클릭 시 하위 Row가 패널로 늘어나면서 추가 정보를 출력
+                                                            </div>
                                                         </div>
                                                     </td>
                                                 </tr>
@@ -339,9 +346,16 @@
                                                     <td class="body14R">조태호<br>매니저</td>
                                                     <td class="body14R">ㅇㅇㅇ팀</td>
                                                     <td class="body14R td_left">
-                                                        <div class="ctnt_area">
-                                                            <span class="text">...</span>
-                                                            <button class="btn btn-line-02 btn-small btn-more"><span>세부 내용 조회</span></button>
+                                                        <div class="accordion-item">
+                                                            <div class="w100 accordion-link flex justify-between">
+                                                                <div class="ctnt_area">
+                                                                    <span class="text">...</span>
+                                                                </div>
+                                                                <button class="btn_accr"></button>
+                                                            </div>
+                                                            <div class="accordion-desc bg-gray50 body14R">
+                                                                이력의 세부 내용이 존재하는 경우 클릭 시 하위 Row가 패널로 늘어나면서 추가 정보를 출력
+                                                            </div>
                                                         </div>
                                                     </td>
                                                 </tr>
@@ -353,9 +367,16 @@
                                                     <td class="body14R">조태호<br>매니저</td>
                                                     <td class="body14R">ㅇㅇㅇ팀</td>
                                                     <td class="body14R td_left">
-                                                        <div class="ctnt_area">
-                                                            <span class="text">...</span>
-                                                            <button class="btn btn-line-02 btn-small btn-more"><span>세부 내용 조회</span></button>
+                                                        <div class="accordion-item">
+                                                            <div class="w100 accordion-link flex justify-between">
+                                                                <div class="ctnt_area">
+                                                                    <span class="text">...</span>
+                                                                </div>
+                                                                <button class="btn_accr"></button>
+                                                            </div>
+                                                            <div class="accordion-desc bg-gray50 body14R">
+                                                                이력의 세부 내용이 존재하는 경우 클릭 시 하위 Row가 패널로 늘어나면서 추가 정보를 출력
+                                                            </div>
                                                         </div>
                                                     </td>
                                                 </tr>
@@ -367,9 +388,16 @@
                                                     <td class="body14R">조태호<br>매니저</td>
                                                     <td class="body14R">ㅇㅇㅇ팀</td>
                                                     <td class="body14R td_left">
-                                                        <div class="ctnt_area">
-                                                            <span class="text">...</span>
-                                                            <button class="btn btn-line-02 btn-small btn-more"><span>세부 내용 조회</span></button>
+                                                        <div class="accordion-item">
+                                                            <div class="w100 accordion-link flex justify-between">
+                                                                <div class="ctnt_area">
+                                                                    <span class="text">...</span>
+                                                                </div>
+                                                                <button class="btn_accr"></button>
+                                                            </div>
+                                                            <div class="accordion-desc bg-gray50 body14R">
+                                                                이력의 세부 내용이 존재하는 경우 클릭 시 하위 Row가 패널로 늘어나면서 추가 정보를 출력
+                                                            </div>
                                                         </div>
                                                     </td>
                                                 </tr>
@@ -381,9 +409,16 @@
                                                     <td class="body14R">조태호<br>매니저</td>
                                                     <td class="body14R">ㅇㅇㅇ팀</td>
                                                     <td class="body14R td_left">
-                                                        <div class="ctnt_area">
-                                                            <span class="text">...</span>
-                                                            <button class="btn btn-line-02 btn-small btn-more"><span>세부 내용 조회</span></button>
+                                                        <div class="accordion-item">
+                                                            <div class="w100 accordion-link flex justify-between">
+                                                                <div class="ctnt_area">
+                                                                    <span class="text">...</span>
+                                                                </div>
+                                                                <button class="btn_accr"></button>
+                                                            </div>
+                                                            <div class="accordion-desc bg-gray50 body14R">
+                                                                이력의 세부 내용이 존재하는 경우 클릭 시 하위 Row가 패널로 늘어나면서 추가 정보를 출력
+                                                            </div>
                                                         </div>
                                                     </td>
                                                 </tr>
@@ -395,9 +430,16 @@
                                                     <td class="body14R">조태호<br>매니저</td>
                                                     <td class="body14R">ㅇㅇㅇ팀</td>
                                                     <td class="body14R td_left">
-                                                        <div class="ctnt_area">
-                                                            <span class="text">...</span>
-                                                            <button class="btn btn-line-02 btn-small btn-more"><span>세부 내용 조회</span></button>
+                                                        <div class="accordion-item">
+                                                            <div class="w100 accordion-link flex justify-between">
+                                                                <div class="ctnt_area">
+                                                                    <span class="text">...</span>
+                                                                </div>
+                                                                <button class="btn_accr"></button>
+                                                            </div>
+                                                            <div class="accordion-desc bg-gray50 body14R">
+                                                                이력의 세부 내용이 존재하는 경우 클릭 시 하위 Row가 패널로 늘어나면서 추가 정보를 출력
+                                                            </div>
                                                         </div>
                                                     </td>
                                                 </tr>
@@ -409,9 +451,16 @@
                                                     <td class="body14R">조태호<br>매니저</td>
                                                     <td class="body14R">ㅇㅇㅇ팀</td>
                                                     <td class="body14R td_left">
-                                                        <div class="ctnt_area">
-                                                            <span class="text">...</span>
-                                                            <button class="btn btn-line-02 btn-small btn-more"><span>세부 내용 조회</span></button>
+                                                        <div class="accordion-item">
+                                                            <div class="w100 accordion-link flex justify-between">
+                                                                <div class="ctnt_area">
+                                                                    <span class="text">...</span>
+                                                                </div>
+                                                                <button class="btn_accr"></button>
+                                                            </div>
+                                                            <div class="accordion-desc bg-gray50 body14R">
+                                                                이력의 세부 내용이 존재하는 경우 클릭 시 하위 Row가 패널로 늘어나면서 추가 정보를 출력
+                                                            </div>
                                                         </div>
                                                     </td>
                                                 </tr>
@@ -423,9 +472,16 @@
                                                     <td class="body14R">조태호<br>매니저</td>
                                                     <td class="body14R">ㅇㅇㅇ팀</td>
                                                     <td class="body14R td_left">
-                                                        <div class="ctnt_area">
-                                                            <span class="text">...</span>
-                                                            <button class="btn btn-line-02 btn-small btn-more"><span>세부 내용 조회</span></button>
+                                                        <div class="accordion-item">
+                                                            <div class="w100 accordion-link flex justify-between">
+                                                                <div class="ctnt_area">
+                                                                    <span class="text">...</span>
+                                                                </div>
+                                                                <button class="btn_accr"></button>
+                                                            </div>
+                                                            <div class="accordion-desc bg-gray50 body14R">
+                                                                이력의 세부 내용이 존재하는 경우 클릭 시 하위 Row가 패널로 늘어나면서 추가 정보를 출력
+                                                            </div>
                                                         </div>
                                                     </td>
                                                 </tr>
@@ -437,9 +493,16 @@
                                                     <td class="body14R">조태호<br>매니저</td>
                                                     <td class="body14R">ㅇㅇㅇ팀</td>
                                                     <td class="body14R td_left">
-                                                        <div class="ctnt_area">
-                                                            <span class="text">...</span>
-                                                            <button class="btn btn-line-02 btn-small btn-more"><span>세부 내용 조회</span></button>
+                                                        <div class="accordion-item">
+                                                            <div class="w100 accordion-link flex justify-between">
+                                                                <div class="ctnt_area">
+                                                                    <span class="text">...</span>
+                                                                </div>
+                                                                <button class="btn_accr"></button>
+                                                            </div>
+                                                            <div class="accordion-desc bg-gray50 body14R">
+                                                                이력의 세부 내용이 존재하는 경우 클릭 시 하위 Row가 패널로 늘어나면서 추가 정보를 출력
+                                                            </div>
                                                         </div>
                                                     </td>
                                                 </tr>
@@ -451,9 +514,16 @@
                                                     <td class="body14R">조태호<br>매니저</td>
                                                     <td class="body14R">ㅇㅇㅇ팀</td>
                                                     <td class="body14R td_left">
-                                                        <div class="ctnt_area">
-                                                            <span class="text">...</span>
-                                                            <button class="btn btn-line-02 btn-small btn-more"><span>세부 내용 조회</span></button>
+                                                        <div class="accordion-item">
+                                                            <div class="w100 accordion-link flex justify-between">
+                                                                <div class="ctnt_area">
+                                                                    <span class="text">...</span>
+                                                                </div>
+                                                                <button class="btn_accr"></button>
+                                                            </div>
+                                                            <div class="accordion-desc bg-gray50 body14R">
+                                                                이력의 세부 내용이 존재하는 경우 클릭 시 하위 Row가 패널로 늘어나면서 추가 정보를 출력
+                                                            </div>
                                                         </div>
                                                     </td>
                                                 </tr>
