--- a/pages/SC_ADMIN_MAIN.html
+++ b/pages/SC_ADMIN_MAIN.html
@@ -47,7 +47,7 @@
                         <!-- 대시보드 -->
                         <section class="main_dashboard_wrap">
 
-                            <div class="dashboard_box space-between">
+                            <div class="dashboard_box align-between">
                                 <div class="content_group">
                                     <img src="../assets/images_admin/admin_ico_dashboard_01.svg" alt="">
 
@@ -62,7 +62,7 @@
                                 <button class="btn btn-line-01 btn-large w100"><span class="body14B">자세히 보기</span><i class="ico-btn ico_arr"></i></button>
                             </div>
 
-                            <div class="dashboard_box space-between">
+                            <div class="dashboard_box align-between">
                                 <div class="content_group">
                                     <img src="../assets/images_admin/admin_ico_dashboard_02.svg" alt="">
 
@@ -77,7 +77,7 @@
                                 <button class="btn btn-line-01 btn-large w100"><span class="body14B">자세히 보기</span><i class="ico-btn ico_arr"></i></button>
                             </div>
 
-                            <div class="dashboard_box space-between">
+                            <div class="dashboard_box align-between">
                                 <div class="content_group">
                                     <img src="../assets/images_admin/admin_ico_dashboard_03.svg" alt="">
 
