--- a/pages/SC_ADMIN_401.html
+++ b/pages/SC_ADMIN_401.html
@@ -298,8 +298,8 @@
                                             <th><span class="body14M">대상</span></th>
                                             <th><span class="body14M">이벤트</span></th>
                                             <th>
-                                                <div class="w100 btn-order-wrap">
-                                                    <span class="body14M order-title">이벤트 일시</span>
+                                                <div class="w100 btn-td-wrap">
+                                                    <span class="body14M title">이벤트 일시</span>
                                                     <label class="btn-order f-right">
                                                         <input role="switch" type="checkbox">
                                                         <span>순서 변경</span>
