--- a/admin_sitemap.html
+++ b/admin_sitemap.html
@@ -295,8 +295,8 @@
                 <a href="pages/SC_ADMIN_004.html" target="_blank" class="new-win">새창</a>
               </div>
             </li>
-            <li class="bg2">
-              <span class="sub-title">유성평가표 미리보기</span>
+            <li class="bg1">
+              <span class="sub-title">유성평가표 미리보기 (<em class="fc-red">처리 버튼 잡아야함</em>)</span>
               <div class="btn-wrap">
                 <a href="pages/SC_ADMIN_005.html" target="viewer">SC_ADMIN_005.html</a>
                 <a href="pages/SC_ADMIN_005.html" target="_blank" class="new-win">새창</a>
