메뉴트리(설정팝업) 작업완료.

--- a/pages/SC_ADMIN_101.html
+++ b/pages/SC_ADMIN_101.html
@@ -65,7 +65,7 @@
                             <div class="portlet_edit_left">
                                 <div class="srch_portlet">
                                     <div class="ipt_div">
-                                        <input type="text" placeholder="분류 체계명">
+                                        <input type="text" placeholder="부서명">
                                         <button type="reset" class="btn_del_keyword"></button>
                                     </div>
                                     <button class="btn_srch"></button>
@@ -74,27 +74,28 @@
                                 <div class="p_edit_tab_wrap">
                                     <div class="p_edit_tab_cont scrollBar2">
                                         <ul class="tree">
-                                            <li class="first depth-1 has-children"><div class="bg_hover"></div><i class="tree-toggle-icon"></i>
-                                                <span>Depth1</span>
-                                                <ul style="display: none;">
-                                                    <li class="depth-2 has-children"><i class="tree-toggle-icon"></i>
+                                            <li class="first depth-1">
+                                                <span>Depth1 (우클릭해보세요)</span>
+                                                <!-- 트리 설정 다이얼로그가 삽입되는 위치 -->
+                                                <ul>
+                                                    <li class="depth-2">
                                                         <span>Depth2</span>
-                                                        <ul style="display: none;">
-                                                            <li class="depth-3 has-children"><i class="tree-toggle-icon"></i>
+                                                        <ul>
+                                                            <li class="depth-3">
                                                                 <span>Depth3</span>
-                                                                <ul style="display: none;">
-                                                                    <li class="depth-4 has-children"><i class="tree-toggle-icon"></i>
+                                                                <ul>
+                                                                    <li class="depth-4">
                                                                         <span>Depth4</span>
-                                                                        <ul style="display: none;">
-                                                                            <li class="depth-5 has-children"><i class="tree-toggle-icon"></i>
+                                                                        <ul>
+                                                                            <li class="depth-5">
                                                                                 <span>Depth5</span>
-                                                                                <ul style="display: none;">
-                                                                                    <li class="depth-6 has-children"><i class="tree-toggle-icon"></i>
+                                                                                <ul>
+                                                                                    <li class="depth-6">
                                                                                         <span>Depth6</span>
-                                                                                        <ul style="display: none;">
-                                                                                            <li class="depth-7 has-children"><i class="tree-toggle-icon"></i>
+                                                                                        <ul>
+                                                                                            <li class="depth-7">
                                                                                                 <span>Depth7</span>
-                                                                                                <ul style="display: none;">
+                                                                                                <ul>
                                                                                                     <li class="depth-8">
                                                                                                         <i class="tree-toggle-icon open"></i><span>Depth8</span>
                                                                                                     </li>
@@ -133,15 +134,15 @@
                                                         </ul>
                                                     </li>
                 
-                                                    <li class="depth-2 has-children"><i class="tree-toggle-icon"></i>
+                                                    <li class="depth-2">
                                                         <span>제품개발 규정</span>
-                                                        <ul style="display: none;">
-                                                            <li class="depth-3 has-children"><i class="tree-toggle-icon"></i>
+                                                        <ul>
+                                                            <li class="depth-3">
                                                                 <span>TEXT TEXT</span>
-                                                                <ul style="display: none;">
-                                                                    <li class="depth-4 has-children"><i class="tree-toggle-icon"></i>
+                                                                <ul>
+                                                                    <li class="depth-4">
                                                                         <span>TEXT TEXT</span>
-                                                                        <ul style="display: none;">
+                                                                        <ul>
                                                                             <li class="depth-5">
                                                                                 <i class="tree-toggle-icon open"></i><span>TEXT TEXT</span>
                                                                             </li>
@@ -162,15 +163,15 @@
                                                             </li>
                                                         </ul>
                                                     </li>
-                                                    <li class="depth-2 has-children"><i class="tree-toggle-icon"></i>
+                                                    <li class="depth-2">
                                                         <span>개발지원 규정</span>  
-                                                        <ul style="display: none;">
-                                                            <li class="depth-3 has-children"><i class="tree-toggle-icon"></i>
+                                                        <ul>
+                                                            <li class="depth-3">
                                                                 <span>TEXT TEXT</span>
-                                                                <ul style="display: none;">
-                                                                    <li class="depth-4 has-children"><i class="tree-toggle-icon"></i>
+                                                                <ul>
+                                                                    <li class="depth-4">
                                                                         <span>TEXT TEXT</span>
-                                                                        <ul style="display: none;">
+                                                                        <ul>
                                                                             <li class="depth-5">
                                                                                 <i class="tree-toggle-icon open"></i><span>TEXT TEXT</span>
                                                                             </li>
@@ -191,15 +192,15 @@
                                                             </li>
                                                         </ul>
                                                     </li>
-                                                    <li class="depth-2 has-children"><i class="tree-toggle-icon"></i>
+                                                    <li class="depth-2">
                                                         <span>기타</span>  
-                                                        <ul style="display: none;">
-                                                            <li class="depth-3 has-children"><i class="tree-toggle-icon"></i>
+                                                        <ul>
+                                                            <li class="depth-3">
                                                                 <span>TEXT TEXT</span>
-                                                                <ul style="display: none;">
-                                                                    <li class="depth-4 has-children"><i class="tree-toggle-icon"></i>
+                                                                <ul>
+                                                                    <li class="depth-4">
                                                                         <span>TEXT TEXT</span>
-                                                                        <ul style="display: none;">
+                                                                        <ul>
                                                                             <li class="depth-5">
                                                                                 <i class="tree-toggle-icon open"></i><span>TEXT TEXT</span>
                                                                             </li>
@@ -222,10 +223,10 @@
                                                     </li>
                                                 </ul>
                                             </li>
-                                            <li class="first depth-1 selected has-children"><div class="bg_hover"></div><i class="tree-toggle-icon"></i>
+                                            <li class="first depth-1 selected has-children">
                                                 <div class="bg_hover"></div>
                                                 <span>영업</span>
-                                                <ul style="display: none;">
+                                                <ul>
                                                     <li class="depth-2 no-children">
                                                         <i class="tree-toggle-icon open"></i><span>TEXT TEXT</span>
                                                     </li>
@@ -234,18 +235,18 @@
                                                     </li>
                                                 </ul>
                                             </li>
-                                            <li class="first depth-1 has-children"><div class="bg_hover"></div><i class="tree-toggle-icon"></i>
+                                            <li class="first depth-1">
                                                 <span>구매</span>
-                                                <ul style="display: none;">
-                                                    <li class="depth-2 has-children"><i class="tree-toggle-icon"></i>
+                                                <ul>
+                                                    <li class="depth-2">
                                                         <span>연구개발기획</span>
-                                                        <ul style="display: none;">
-                                                            <li class="depth-3 has-children"><i class="tree-toggle-icon"></i>
+                                                        <ul>
+                                                            <li class="depth-3">
                                                                 <span>TEXT TEXT</span>
-                                                                <ul style="display: none;">
-                                                                    <li class="depth-4 has-children"><i class="tree-toggle-icon"></i>
+                                                                <ul>
+                                                                    <li class="depth-4">
                                                                         <span>TEXT TEXT</span>
-                                                                        <ul style="display: none;">
+                                                                        <ul>
                                                                             <li class="depth-5">
                                                                                 <i class="tree-toggle-icon open"></i><span>TEXT TEXT</span>
                                                                             </li>
@@ -274,6 +275,16 @@
                                 </div>
                             </div>
                             <!--//트리맵-->
+
+
+                            <!-- 트리 설정 팝업 -->
+                            <div class="tree_editPOP scrollBar3">
+                                <button class="body14R">등록</button>
+                                <button class="body14R">수정</button>
+                                <button class="body14R">이동</button>
+                                <button class="body14R">삭제</button>
+                            </div>
+                            <!-- //트리 설정 팝업 -->
                         </div>
 
 
@@ -419,6 +430,9 @@
 
 <script type="text/javascript" src="../assets/js/jquery-3.2.1.min.js"></script>
 <script type="text/javascript" src="../assets/js/script.js"></script>
+<script>
+    treemap();
+    </script>
 
 </body>
 </html>
