--- a/admin_sitemap.html
+++ b/admin_sitemap.html
@@ -268,7 +268,7 @@
           <h2>시스템관리 [표준관리]</h2>
           <ul>
             <li class="bg1"> 
-              <span class="sub-title">표준- 분류 체계 (<em class="fc-red">추후 트리작업</em>)</span>
+              <span class="sub-title">표준- 분류 체계</span>
               <div class="btn-wrap">
                 <a href="pages/SC_ADMIN_001.html" target="viewer">SC_ADMIN_001.html</a>
                 <a href="pages/SC_ADMIN_001.html" target="_blank" class="new-win">새창</a>
@@ -348,7 +348,7 @@
           <h2>시스템관리 [경영매뉴얼]</h2>
           <ul>
             <li class="bg1"> 
-              <span class="sub-title">경영매뉴얼 - 분류체계 (<em class="fc-red">추후 트리작업</em>)</span>
+              <span class="sub-title">경영매뉴얼 - 분류체계</span>
               <div class="btn-wrap">
                 <a href="pages/SC_ADMIN_101.html" target="viewer">SC_ADMIN_101.html</a>
                 <a href="pages/SC_ADMIN_101.html" target="_blank" class="new-win">새창</a>
@@ -397,7 +397,7 @@
           <h2>시스템관리 [인증기록 분류 체계]</h2>
           <ul>
             <li class="bg1"> 
-              <span class="sub-title">인증 기록 - 분류 체계 (<em class="fc-red">추후 트리작업</em>)</span>
+              <span class="sub-title">인증 기록 - 분류 체계</span>
               <div class="btn-wrap">
                 <a href="pages/SC_ADMIN_301.html" target="viewer">SC_ADMIN_301.html</a>
                 <a href="pages/SC_ADMIN_301.html" target="_blank" class="new-win">새창</a>
