--- a/pages/SC_ADMIN_001.html
+++ b/pages/SC_ADMIN_001.html
@@ -78,27 +78,28 @@
                                 <div class="p_edit_tab_wrap">
                                     <div class="p_edit_tab_cont scrollBar2">
                                         <ul class="tree">
-                                            <li class="first depth-1 has-children"><div class="bg_hover"></div><i class="tree-toggle-icon"></i>
-                                                <span>Depth1</span>
-                                                <ul style="display: none;">
-                                                    <li class="depth-2 has-children"><i class="tree-toggle-icon"></i>
+                                            <li class="first depth-1">
+                                                <span>Depth1 (우클릭해보세요)</span>
+                                                <!-- 트리 설정 다이얼로그가 삽입되는 위치 -->
+                                                <ul>
+                                                    <li class="depth-2">
                                                         <span>Depth2</span>
-                                                        <ul style="display: none;">
-                                                            <li class="depth-3 has-children"><i class="tree-toggle-icon"></i>
+                                                        <ul>
+                                                            <li class="depth-3">
                                                                 <span>Depth3</span>
-                                                                <ul style="display: none;">
-                                                                    <li class="depth-4 has-children"><i class="tree-toggle-icon"></i>
+                                                                <ul>
+                                                                    <li class="depth-4">
                                                                         <span>Depth4</span>
-                                                                        <ul style="display: none;">
-                                                                            <li class="depth-5 has-children"><i class="tree-toggle-icon"></i>
+                                                                        <ul>
+                                                                            <li class="depth-5">
                                                                                 <span>Depth5</span>
-                                                                                <ul style="display: none;">
-                                                                                    <li class="depth-6 has-children"><i class="tree-toggle-icon"></i>
+                                                                                <ul>
+                                                                                    <li class="depth-6">
                                                                                         <span>Depth6</span>
-                                                                                        <ul style="display: none;">
-                                                                                            <li class="depth-7 has-children"><i class="tree-toggle-icon"></i>
+                                                                                        <ul>
+                                                                                            <li class="depth-7">
                                                                                                 <span>Depth7</span>
-                                                                                                <ul style="display: none;">
+                                                                                                <ul>
                                                                                                     <li class="depth-8">
                                                                                                         <i class="tree-toggle-icon open"></i><span>Depth8</span>
                                                                                                     </li>
@@ -137,15 +138,15 @@
                                                         </ul>
                                                     </li>
                 
-                                                    <li class="depth-2 has-children"><i class="tree-toggle-icon"></i>
+                                                    <li class="depth-2">
                                                         <span>제품개발 규정</span>
-                                                        <ul style="display: none;">
-                                                            <li class="depth-3 has-children"><i class="tree-toggle-icon"></i>
+                                                        <ul>
+                                                            <li class="depth-3">
                                                                 <span>TEXT TEXT</span>
-                                                                <ul style="display: none;">
-                                                                    <li class="depth-4 has-children"><i class="tree-toggle-icon"></i>
+                                                                <ul>
+                                                                    <li class="depth-4">
                                                                         <span>TEXT TEXT</span>
-                                                                        <ul style="display: none;">
+                                                                        <ul>
                                                                             <li class="depth-5">
                                                                                 <i class="tree-toggle-icon open"></i><span>TEXT TEXT</span>
                                                                             </li>
@@ -166,15 +167,15 @@
                                                             </li>
                                                         </ul>
                                                     </li>
-                                                    <li class="depth-2 has-children"><i class="tree-toggle-icon"></i>
+                                                    <li class="depth-2">
                                                         <span>개발지원 규정</span>  
-                                                        <ul style="display: none;">
-                                                            <li class="depth-3 has-children"><i class="tree-toggle-icon"></i>
+                                                        <ul>
+                                                            <li class="depth-3">
                                                                 <span>TEXT TEXT</span>
-                                                                <ul style="display: none;">
-                                                                    <li class="depth-4 has-children"><i class="tree-toggle-icon"></i>
+                                                                <ul>
+                                                                    <li class="depth-4">
                                                                         <span>TEXT TEXT</span>
-                                                                        <ul style="display: none;">
+                                                                        <ul>
                                                                             <li class="depth-5">
                                                                                 <i class="tree-toggle-icon open"></i><span>TEXT TEXT</span>
                                                                             </li>
@@ -195,15 +196,15 @@
                                                             </li>
                                                         </ul>
                                                     </li>
-                                                    <li class="depth-2 has-children"><i class="tree-toggle-icon"></i>
+                                                    <li class="depth-2">
                                                         <span>기타</span>  
-                                                        <ul style="display: none;">
-                                                            <li class="depth-3 has-children"><i class="tree-toggle-icon"></i>
+                                                        <ul>
+                                                            <li class="depth-3">
                                                                 <span>TEXT TEXT</span>
-                                                                <ul style="display: none;">
-                                                                    <li class="depth-4 has-children"><i class="tree-toggle-icon"></i>
+                                                                <ul>
+                                                                    <li class="depth-4">
                                                                         <span>TEXT TEXT</span>
-                                                                        <ul style="display: none;">
+                                                                        <ul>
                                                                             <li class="depth-5">
                                                                                 <i class="tree-toggle-icon open"></i><span>TEXT TEXT</span>
                                                                             </li>
@@ -226,10 +227,10 @@
                                                     </li>
                                                 </ul>
                                             </li>
-                                            <li class="first depth-1 selected has-children"><div class="bg_hover"></div><i class="tree-toggle-icon"></i>
+                                            <li class="first depth-1 selected has-children">
                                                 <div class="bg_hover"></div>
                                                 <span>영업</span>
-                                                <ul style="display: none;">
+                                                <ul>
                                                     <li class="depth-2 no-children">
                                                         <i class="tree-toggle-icon open"></i><span>TEXT TEXT</span>
                                                     </li>
@@ -238,18 +239,18 @@
                                                     </li>
                                                 </ul>
                                             </li>
-                                            <li class="first depth-1 has-children"><div class="bg_hover"></div><i class="tree-toggle-icon"></i>
+                                            <li class="first depth-1">
                                                 <span>구매</span>
-                                                <ul style="display: none;">
-                                                    <li class="depth-2 has-children"><i class="tree-toggle-icon"></i>
+                                                <ul>
+                                                    <li class="depth-2">
                                                         <span>연구개발기획</span>
-                                                        <ul style="display: none;">
-                                                            <li class="depth-3 has-children"><i class="tree-toggle-icon"></i>
+                                                        <ul>
+                                                            <li class="depth-3">
                                                                 <span>TEXT TEXT</span>
-                                                                <ul style="display: none;">
-                                                                    <li class="depth-4 has-children"><i class="tree-toggle-icon"></i>
+                                                                <ul>
+                                                                    <li class="depth-4">
                                                                         <span>TEXT TEXT</span>
-                                                                        <ul style="display: none;">
+                                                                        <ul>
                                                                             <li class="depth-5">
                                                                                 <i class="tree-toggle-icon open"></i><span>TEXT TEXT</span>
                                                                             </li>
@@ -278,6 +279,17 @@
                                 </div>
                             </div>
                             <!--//트리맵-->
+
+
+                            <!-- 트리 설정 팝업 -->
+                            <div class="tree_editPOP scrollBar3">
+                                <button class="body14R">등록</button>
+                                <button class="body14R">수정</button>
+                                <button class="body14R">이동</button>
+                                <button class="body14R">삭제</button>
+                            </div>
+                            <!-- //트리 설정 팝업 -->
+
                         </div>
 
 
@@ -371,6 +383,9 @@
 
 <script type="text/javascript" src="../assets/js/jquery-3.2.1.min.js"></script>
 <script type="text/javascript" src="../assets/js/script.js"></script>
+<script>
+treemap();
+</script>
 
 </body>
 </html>
